Updated travis.yml to use Maven instead of Ant build, and to send cobertura code coverage reports to codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: java
 sudo: false # for faster builds
 jdk: oraclejdk8
-script: ant build
+script: mvn clean verify
 
-
-# Upload JCoCo code coverage report to codecov.io after build
+# Upload cobertura-maven code coverage report to codecov.io after build
 after_success:
   - bash <(curl -s https://codecov.io/bash) -t db881e87-c34f-4d71-ac17-73575d05284e
