--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: java
 sudo: false # for faster builds
 jdk: oraclejdk8
-script: mvn clean verify
-  - "mvn cobertura:cobertura"
+script: 
+  - mvn clean verify
+  - mvn cobertura:cobertura
 
 # Upload cobertura-maven code coverage report to codecov.io after build
 after_success:
