--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ jdk: oraclejdk8
 script: 
   - mvn clean verify
   - mvn cobertura:cobertura
+  
+before_script:
+  # For GUI testing
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 # Upload cobertura-maven code coverage report to codecov.io after building
 after_success:
